--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
       <div class="col-lg-6 col-md-12 col-12 p-5">
         <div class="card h-100">
-          <img src="image.png" class="card-img-top  h-50 imgstyle" alt="card image">
+          <img src="Image.png" class="card-img-top  h-50 imgstyle" alt="card image">
           <div class="card-body">
             <h4 class="card-title h4style font-weight-bold">Image Converter</h4>
             <p class="card-text">Convert WebP to JPG,PNG,MP-4 etc.</p>
