--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <img src="Image.png" class="card-img-top  h-50 imgstyle" alt="card image">
           <div class="card-body">
             <h4 class="card-title h4style font-weight-bold">Image Converter</h4>
-            <p class="card-text">Convert WebP to JPG,PNG,MP-4 etc.</p>
+            <p class="card-text">Convert WebP to JPG,PNG etc.</p>
             <a href="https://ezgif.com/webp-to-jpg" class="btn btn-primary ">Click here</a>
             
           </div>
@@ -200,17 +200,17 @@
 <div class="list-group   text-center text">
     
     <div>  <a href="https://timesofindia.indiatimes.com/" class=" list-group-item list-group-item-warning"><h2>The Times of India</h2> </a>
-      <img src="toi.jpg" class="w-50 h-50"></div>
+      <img src="toi.jpg" class="w-75 h-75"></div>
 
       <div> <a href="https://en.wikipedia.org/wiki/Main_Page" class="list-group-item font-weight-bold list-group-item-warning text-capitalize"><h2> Wikipedia,the free encyclopedia</h2></a>
-      <img src="wiki.jpg" class="w-50 h-50">
+      <img src="wiki.jpg" class="w-75 h-75">
 </div>
 
        <div>  <a href="https://1337x.to/" class=" list-group-item list-group-item-warning"><h2>1337X</h2> </a>
-      <img src="1337x.jpg" class="w-50 h-50"></div>
+      <img src="1337x.jpg" class="w-75 h-75"></div>
 
       <div>  <a href="https://github.com/" class=" list-group-item list-group-item-warning"><h2>GitHub</h2> </a>
-      <img src="github.png" class="w-50 h-50"></div>
+      <img src="github.png" class="w-75 h-75"></div>
 
       <!--<div>  <a href="#" class=" list-group-item list-group-item-warning"><h2>GitHub</h2> </a>
       <img src="" class="w-50 h-50"></div>-->
@@ -222,7 +222,7 @@
 
 
 <div class="text2">
-  <h1 class="text-capitalize text-center  font-weight-bold bg-white p-5"><u>Some Inspirational Quotes</u></h1>
+  <h2 class="text-capitalize text-center  font-weight-bold bg-white p-5"><u>Some Inspirational Quotes</u></h2>
   <br>
   <div class="row container-fluid">
     <div class="col-xl-4 col-lg-4 col-md-4 col-6">
