--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 	<h1 class="text-white text-center"></h1>		
 	</div>
 <div class="col-lg-6 col-6 "><br>	<a href="#"><h1 class="text-center badge-danger ">About</h1><br></a>
-	<span class="color bg-dark"><b>This Website focuses mainly on design and to make it responsive for all kinds of users. Apart from that some other website link is attached that is needed in our daily life for any kind of conversion or download. It consist of websites which we use oftenly. Main purpose is to combine all most visited website under a single page.</b></span>
+	<span class="color bg-dark"><b>This Website focuses mainly on design and to make it responsive for all kinds of users. Apart from that, some other websites link is attached that is required in our daily life for any kind of conversion or download. It consist of websites which we use frequently. Main purpose is to combine some most visited website under a single page.</b></span>
 
 </div>
 	
