--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<header>
 	
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand text-light font-weight-bold" href="#"> Aadil Tech</a>
+  <a class="navbar-brand text-light font-weight-bold" title="This Web Page Is Designed By AADIL" href="#"> Aadil Tech</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -23,7 +23,7 @@
         <a class="nav-link" href="https://aadiltech.github.io/converter_website.github.io/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://aadiltech.github.io/converter_website.github.io/">About</a>
+        <a class="nav-link" title="Scroll Down" href="https://aadiltech.github.io/converter_website.github.io/">About</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
