--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
       <div>  <a href="https://github.com/"  title="Click Here" class=" list-group-item list-group-item-warning"><h2>GitHub</h2> </a>
       <img src="github.png" class="w-75 h-75"></div>
 	
-	<div>  <a href="https://www.examveda.com/" class=" list-group-item list-group-item-warning"><h2>EXAMVEDA</h2> </a>
+	<div>  <a href="https://www.examveda.com/" class=" list-group-item list-group-item-warning"><h2>Examveda</h2> </a>
       <img src="examveda.png" class="w-75 h-75"> </div>
 	
-	<div>  <a href="https://prepinsta.com/tcs/programming-logic-questions/" class=" list-group-item list-group-item-warning"><h2>PREPINSTA TCS QUESTION/ANSWERS</h2> </a>
+	<div>  <a href="https://prepinsta.com/tcs/programming-logic-questions/" class=" list-group-item list-group-item-warning"><h2>Prepinsta TCS Question/Answers</h2> </a>
       <img src="tcs.png" class="w-75 h-75"></div>
 
       <!--<div>  <a href="#" class=" list-group-item list-group-item-warning"><h2>GitHub</h2> </a>
