--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 	
 	<h1 class="text-white text-center"></h1>		
 	</div>
-<div class="col-lg-6 col-12 "><br>	<a href="#"><h1 class="text-center badge-danger ">About</h1><br></a>
+<div class="col-lg-6 col-12 tab-content"><br><h1 class="text-center badge-danger ">About</h1><br>
 	<span class="color bg-dark"><b>This Website focuses mainly on design and to make it responsive for all kinds of users. Apart from that, some other websites link is attached that is required in our daily life for any kind of conversion or download. It consist of websites which we use frequently. Main purpose is to combine some most visited website under a single page.</b></span>
 
 </div>
